macro(nb_test)
  # multiple sources
  if (${ARGC} GREATER 1)
    set(test_name "${ARGV0}")
    set(src ${ARGN})
    list(REMOVE_AT src 0)
  else ()
    set(test_name "test-${ARGV0}")
    set(src "${ARGV0}.c")
  endif ()
  message(STATUS "Adding test ${test_name} (${src})")
  add_executable(${test_name} ${src})
  target_link_libraries(${test_name} naughty-buffers criterion)
  add_test(NAME ${test_name} COMMAND ${test_name})
endmacro()

find_package(Criterion QUIET)
if (CRITERION_FOUND)
  nb_test(test-memory-calls memory.c)
  nb_test(test-push push.c)
  nb_test(test-assign assign.c)
  nb_test(test-insert insert.c)
else ()
  message(STATUS "Criterion was not found. Tests disabled.")
endif ()